--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             height: 200px;
             background-size: cover;
             background-repeat: no-repeat;
+            display: inline-block;
         }
 
         .levelA { background-image: url('imagens/levelA.png'); }
@@ -172,10 +173,18 @@
                     let dashboardLink = '';
                     if (userData.role === 'proprietario') {
                         dashboardLink = '<a href="painel_proprietario.html" class="dashboard-link">OWNER DASHBOARD</a>';
+                        liberarNiveis(['Level1', 'Level2', 'Level3', 'Level4']); // Desbloqueia todos os níveis
                     } else if (userData.role === 'professor') {
                         dashboardLink = '<a href="painel_professor.html" class="dashboard-link">TEACHER DASHBOARD</a>';
-                    } else {
+                        liberarNiveis(['Level1', 'Level2', 'Level3', 'Level4']); // Desbloqueia todos os níveis
+                    } else if (userData.role === 'aluno') {
                         dashboardLink = '<a href="painel_aluno.html" class="dashboard-link">STUDENT DASHBOARD</a>';
+                        // Libera apenas os níveis de acordo com o progresso do aluno
+                        if (userData.progresso) {
+                            liberarNiveis(Object.keys(userData.progresso));
+                        } else {
+                            liberarNiveis(['Level1']);
+                        }
                     }
 
                     // Atualiza o dropdown com o link do dashboard e botão de logout
@@ -183,13 +192,6 @@
                         ${dashboardLink}
                         <a href="#" id="logout">LEAVE</a>
                     `;
-
-                    // Ajusta o desbloqueio dos níveis
-                    if (userData.progresso) {
-                        liberarNiveis(Object.keys(userData.progresso));
-                    } else {
-                        liberarNiveis(['Level1']);
-                    }
                 });
             } else {
                 loginLink.innerHTML = "Login";
@@ -244,13 +246,6 @@
                 }).catch((error) => {
                     console.error("Erro ao deslogar:", error);
                 });
-            }
-        });
-
-        // Permitir clique nos links do dashboard
-        document.addEventListener("click", function(event) {
-            if (event.target.classList.contains("dashboard-link")) {
-                window.location.href = event.target.getAttribute("href");
             }
         });
     </script>
