--- a/index.html
+++ b/index.html
@@ -104,6 +104,28 @@
         .dropdown a:hover {
             background-color: #f2f2f2;
         }
+
+        /* Centraliza a imagem de convite e ajusta responsividade */
+        .invitation-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 20px 0; /* Espaçamento entre o título e o texto */
+        }
+
+        .invitation-button {
+            max-width: 80%; /* Limita a largura máxima a 80% da tela */
+            height: auto;
+            cursor: pointer;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: all 0.3s ease;
+        }
+
+        .invitation-button:hover {
+            transform: scale(1.05);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+        }
     </style>
 </head>
 
@@ -121,12 +143,14 @@
                 <h1>Hannah English<br>Learning English with the Bible</h1>
             </div>
         </header>
+        
+        <!-- Adicionando a imagem convite com aparência de botão -->
+        <div class="invitation-container" id="invitationContainer">
+            <img src="imagens/convite.png" alt="Convite" class="invitation-button" id="invitationButton">
+        </div>
+
         <main>
             <h2>Escolha seu nível</h2>
-            <!-- Adicionando a imagem convite com aparência de botão -->
-            <div class="invitation-container" id="invitationContainer">
-                <img src="imagens/convite.png" alt="Convite" class="invitation-button" id="invitationButton">
-            </div>
             <div class="levels">
                 <a href="Level1/index.html" class="level-button levelA" id="Level1"></a>
                 <a href="Level2/index.html" class="level-button levelB" id="Level2"></a>
@@ -225,6 +249,14 @@
                         ${dashboardLink}
                         <a href="#" id="logout">LEAVE</a>
                     `;
+
+                    // Adiciona funcionalidade de redirecionamento para o dashboard
+                    document.querySelectorAll('.dashboard-link').forEach(link => {
+                        link.addEventListener('click', function(event) {
+                            event.preventDefault();
+                            window.location.href = this.getAttribute('href'); // Redireciona para o link
+                        });
+                    });
                 });
             } else {
                 loginLink.innerHTML = "Login";
