--- a/index.html
+++ b/index.html
@@ -289,6 +289,9 @@
 
         // Alternar dropdown ao clicar
         document.getElementById("loginContainer").addEventListener("click", function(event) {
+            const user = firebase.auth().currentUser;
+            if (!user) return; // Evita abrir dropdown se não estiver logado
+
             event.preventDefault();
             const dropdown = document.getElementById("userDropdown");
             dropdown.style.display = (dropdown.style.display === 'none' || dropdown.style.display === '') ? 'block' : 'none';
