--- a/index.html
+++ b/index.html
@@ -12,16 +12,13 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <style>
-        /* Fundo de tela com imagem repetida */
+        /* Remove o fundo do body e ajusta para o container */
         body {
-            background-image: url('../imagens/fundo.png');
-            background-repeat: repeat;
-            background-size: 200%;
             margin: 0;
             font-family: Arial, sans-serif;
         }
 
-        /* Estilos adicionais para centralizar o conteúdo */
+        /* Fundo do contêiner principal */
         .container {
             width: 100%;
             max-width: 1200px;
@@ -29,6 +26,9 @@
             padding: 20px;
             text-align: center;
             position: relative;
+            background-image: url('../imagens/fundo.png');
+            background-repeat: repeat;
+            background-size: 200%;
         }
 
         .levels {
