--- a/Level1/Unit1/MemoryGame/index.html
+++ b/Level1/Unit1/MemoryGame/index.html
@@ -7,7 +7,9 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #f5f7fa, #c3cfe2);
+            background-image: url('../../../imagens/fundo.png');
+            background-repeat: repeat;
+            background-size: auto;
             color: #333;
             margin: 0;
             padding: 0;
@@ -78,7 +80,6 @@
         #reset-button:hover {
             background-color: #357ABD;
         }
-
         .image-container {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
@@ -86,12 +87,10 @@
             justify-content: center;
             margin-bottom: 20px;
         }
-
         .image-container img {
             max-width: 100px;
             margin: auto;
         }
-
         #back-button {
             margin: 10px;
             padding: 10px 20px;
@@ -110,8 +109,6 @@
         #back-button:hover {
             background-color: #357ab7;
         }
-
-        /* Media query para telas pequenas */
         @media (max-width: 600px) {
             #back-button {
                 position: static;
@@ -119,7 +116,7 @@
                 display: block;
             }
             h1 {
-                margin-top: 50px; /* Adiciona espaço extra acima do título */
+                margin-top: 50px;
             }
         }
     </style>
@@ -158,19 +155,15 @@
         function createWordSearchGrid(words) {
             const canvas = document.getElementById('word-search-canvas');
             const ctx = canvas.getContext('2d');
-            const gridSize = 15; // Tamanho da grade do caça-palavras
-            const cellSize = canvas.width / gridSize; // Tamanho de cada célula
+            const gridSize = 15;
+            const cellSize = canvas.width / gridSize;
             ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-            // Código para gerar a grade do jogo de caça-palavras
             for (let i = 0; i < gridSize; i++) {
                 for (let j = 0; j < gridSize; j++) {
                     ctx.strokeRect(i * cellSize, j * cellSize, cellSize, cellSize);
                 }
             }
-
-            // Aqui você pode adicionar mais lógica para preencher a grade com as palavras
-            // e letras aleatórias.
         }
 
         document.getElementById('reset-button').addEventListener('click', () => {
