--- a/Level1/Unit1/MemoryGame/index.html
+++ b/Level1/Unit1/MemoryGame/index.html
@@ -142,6 +142,7 @@
                 .then(data => {
                     const wordsArray = data.split('\n').map(word => word.trim()).filter(word => word.length > 0);
                     const wordsList = document.getElementById('words');
+                    wordsList.innerHTML = ''; // Limpa a lista antes de recarregar
                     wordsArray.forEach(word => {
                         const li = document.createElement('li');
                         li.textContent = word;
