--- a/Level1/Unit1/MemoryGame/index.html
+++ b/Level1/Unit1/MemoryGame/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-image: url('../../../imagens/fundo.png');
+            background-image: url('../../../../imagens/fundo.png');
             background-repeat: repeat;
             background-size: auto;
             color: #333;
@@ -80,6 +80,7 @@
         #reset-button:hover {
             background-color: #357ABD;
         }
+
         .image-container {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
@@ -87,10 +88,12 @@
             justify-content: center;
             margin-bottom: 20px;
         }
+
         .image-container img {
             max-width: 100px;
             margin: auto;
         }
+
         #back-button {
             margin: 10px;
             padding: 10px 20px;
@@ -109,6 +112,8 @@
         #back-button:hover {
             background-color: #357ab7;
         }
+
+        /* Media query para telas pequenas */
         @media (max-width: 600px) {
             #back-button {
                 position: static;
@@ -116,15 +121,15 @@
                 display: block;
             }
             h1 {
-                margin-top: 50px;
+                margin-top: 50px; /* Adiciona espaço extra acima do título */
             }
         }
     </style>
 </head>
 <body>
-<button onclick="window.location.href='../index.html'" id="back-button">
-    Back
-</button>
+    <button onclick="window.location.href='../index.html'" id="back-button">
+        Back
+    </button>
 
     <h1>Hannah Word Search Game</h1>
     <button id="reset-button">Restart Game</button>
@@ -142,7 +147,6 @@
                 .then(data => {
                     const wordsArray = data.split('\n').map(word => word.trim()).filter(word => word.length > 0);
                     const wordsList = document.getElementById('words');
-                    wordsList.innerHTML = ''; // Limpa a lista antes de recarregar
                     wordsArray.forEach(word => {
                         const li = document.createElement('li');
                         li.textContent = word;
@@ -156,15 +160,19 @@
         function createWordSearchGrid(words) {
             const canvas = document.getElementById('word-search-canvas');
             const ctx = canvas.getContext('2d');
-            const gridSize = 15;
-            const cellSize = canvas.width / gridSize;
+            const gridSize = 15; // Tamanho da grade do caça-palavras
+            const cellSize = canvas.width / gridSize; // Tamanho de cada célula
             ctx.clearRect(0, 0, canvas.width, canvas.height);
 
+            // Código para gerar a grade do jogo de caça-palavras
             for (let i = 0; i < gridSize; i++) {
                 for (let j = 0; j < gridSize; j++) {
                     ctx.strokeRect(i * cellSize, j * cellSize, cellSize, cellSize);
                 }
             }
+
+            // Aqui você pode adicionar mais lógica para preencher a grade com as palavras
+            // e letras aleatórias.
         }
 
         document.getElementById('reset-button').addEventListener('click', () => {
