--- a/Level1/Unit1/MemoryGame2/index.html
+++ b/Level1/Unit1/MemoryGame2/index.html
@@ -13,7 +13,7 @@
             justify-content: flex-start;
             height: 100vh;
             margin: 0;
-            background-color: #f7f7f7;
+            background: url('../../../imagens/fundo.png') repeat;
             color: #333;
         }
 
