--- a/Level1/Unit1/MemoryGame2/index.html
+++ b/Level1/Unit1/MemoryGame2/index.html
@@ -149,6 +149,54 @@
         #restart-button:hover {
             background-color: #218838;
         }
+
+        /* Modal de conclusão */
+        #overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 1000;
+        }
+
+        #completion-modal {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            z-index: 1001;
+        }
+
+        #completion-modal h2 {
+            margin-bottom: 10px;
+        }
+
+        #completion-modal p {
+            margin-bottom: 20px;
+        }
+
+        #completion-modal button {
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1em;
+        }
+
+        #completion-modal button:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
@@ -160,13 +208,25 @@
     </div>
     <button id="restart-button" onclick="restartGame()">Restart Game</button>
 
+    <!-- Modal de conclusão --> 
+    <div id="overlay"></div>
+    <div id="completion-modal">
+        <h2>Phase Completed!</h2>
+        <p>Congratulations! You have completed this phase.</p>
+        <button onclick="closeModal()">Close</button>
+    </div>
+
     <script>
         const gameContainer = document.getElementById('memory-game');
         const moveCounterElement = document.getElementById('move-counter');
+        const overlay = document.getElementById('overlay');
+        const completionModal = document.getElementById('completion-modal');
         let moves = 0;
         let firstCard = null;
         let secondCard = null;
         let lockBoard = false;
+        let matchedPairs = 0;
+        let totalPairs = 0;
 
         function loadCardsData(callback) {
             fetch('../data2/words.txt')
@@ -189,6 +249,7 @@
                         });
                     });
 
+                    totalPairs = words.length;
                     callback(cardsArray);
                 });
         }
@@ -256,7 +317,17 @@
         function checkForMatch() {
             const isMatch = firstCard.dataset.pair === secondCard.dataset.pair;
 
-            isMatch ? disableCards() : unflipCards();
+            if (isMatch) {
+                disableCards();
+                matchedPairs++;
+
+                if (matchedPairs === totalPairs) {
+                    markPhaseCompleted();
+                    showCompletionModal();
+                }
+            } else {
+                unflipCards();
+            }
         }
 
         function disableCards() {
@@ -291,6 +362,7 @@
             });
             adjustFontSize();
             moves = 0;
+            matchedPairs = 0;
             moveCounterElement.textContent = 'Moves: 0';
         }
 
@@ -312,6 +384,21 @@
                     card.style.fontSize = `${fontSize}px`;
                 }
             });
+        }
+
+        function markPhaseCompleted() {
+            // Implementar lógica para marcar a fase como concluída (e.g., salvar no banco de dados)
+            console.log("Fase concluída!");
+        }
+
+        function showCompletionModal() {
+            overlay.style.display = 'block';
+            completionModal.style.display = 'block';
+        }
+
+        function closeModal() {
+            overlay.style.display = 'none';
+            completionModal.style.display = 'none';
         }
 
         loadCardsData(initGame);
